unpackaged/main/default/objects/ATS_Platform__c/ATS_Platform__c.object-meta.xml
<CustomObject>
    <description>Multi Tennant ATS</description>
    <label>Applicants In Process</label>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants In Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>