unpackaged/main/default/objects/ATS_Platform__c/fields/CV__c.field-meta.xml
<CustomField>
    <fullName>CV__c</fullName>
    <description>Copy &amp; Paste CV</description>
    <label>CV</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>