unpackaged/main/default/objects/ATS_Platform__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <description>Interview Stage Break Down</description>
    <label>Interview Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hiring Manager CV Review</fullName>
            </value>
            <value>
                <fullName>Telescreen</fullName>
            </value>
            <value>
                <fullName>Hiring Manager Screen</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>