unpackaged/main/default/objects/ATS_Platform__c/fields/LinkedIn_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_URL__c</fullName>
    <description>Link to LinkedIn</description>
    <label>LinkedIn Profile URL</label>
    <type>Url</type>
</CustomField>