unpackaged/main/default/objects/ATS_Platform__c/fields/Right_to_Work_in_the_UK__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Work_in_the_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Right to work in the UK</description>
    <label>Right to Work in the UK</label>
    <type>Checkbox</type>
</CustomField>