unpackaged/main/default/objects/ATS_Platform__c/fields/Salary_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations__c</fullName>
    <description>Current</description>
    <label>Salary Expectations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>