unpackaged/main/default/objects/ATS_Platform__c/fields/Source_of_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Candidate__c</fullName>
    <label>Source of Candidate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn Advert</fullName>
            </value>
            <value>
                <fullName>LinkedIn Outreach</fullName>
            </value>
            <value>
                <fullName>CV Library</fullName>
            </value>
            <value>
                <fullName>Job Site</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Networking Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>